4-helm-charts-and-manifests/tekton-pipelines-definitions-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tekton-pipelines
  labels:
    app.kubernetes.io/instance: default
    app.kubernetes.io/part-of: tekton-pipelines
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: v1.31
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
